fix: mobile text styling not aligned

--- a/styles.css
+++ b/styles.css
@@ -118,6 +118,7 @@ li {
     margin-bottom: 0.5em;
     flex-direction: column;
     padding: 0.5em;
+    text-align: center;
   }
 
   span {
